fix minor comments and add librarypath (#3)